storage-gateway-ec2.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Storage Gateway EC2
Parameters:
  EC2KeyPair:
    Description: "Amazon EC2 Key Pair"
    Type: "AWS::EC2::KeyPair::KeyName"
    Default : "test-geethika"
  ImageAMI:
    Description: "Enter a Storage Gateway AMI Id"
    Type: String
    Default: "ami-0ecd0f79f8787984b" ### Storage Gateway Community AMI for ap-southeast-2 
  StorageGWEC2InstanceIP:
    Description: "Enter a valid IP Address for the Storage Gateway Instance"
    Type: String
    Default : "10.0.1.51"
    AllowedPattern : "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})"
  InstanceType:
    Description: "Enter a valid Instance Type"
    Type: String
    Default: "m4.xlarge"
    AllowedValues: ["m4.xlarge", "m4.2xlarge", "m4.4xlarge", "m5.xlarge", "m5.2xlarge", "m5.4xlarge", "c5.2xlarge", "c5.4xlarge","i3.xlarge", "i3.2xlarge", "i3.4xlarge"]
  VolumeSize:
    Description: "Enter a value for Volume Size"
    Type: Number
    Default: 200
    ConstraintDescription: Please choose a valid Number
    AllowedValues: [150, 200, 300, 500]
  VPC:
    Description: "Choose the VPC to deploy in to"
    Type: "AWS::EC2::VPC::Id"
    Default: "vpc-66e6f803"
  Subnet:
    Description: "Choose the Subnet to deploy in to"
    Type: "AWS::EC2::Subnet::Id"
    Default: "subnet-f0e484b9"
  SSHnetwork:
    Description: "Enter a CIDR Address to restrict SSH e.g. 0.0.0.0/0 -or- 1.2.3.4/32 etc"
    Type: String
    Default: "0.0.0.0/0"
    AllowedPattern : "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription : "must be a valid CIDR range of the form x.x.x.x/x."

Resources:
  StorageGWEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      BlockDeviceMappings:
      - DeviceName: /dev/sdb
        Ebs: {DeleteOnTermination: 'true', VolumeSize: !Ref "VolumeSize", VolumeType: gp2}
      IamInstanceProfile: StorageGwIP
      ImageId: !Ref  "ImageAMI" 
      InstanceType: !Ref "InstanceType" 
      KeyName: !Ref "EC2KeyPair" 
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true" ### Assign and IPv4 Address
          DeviceIndex: "0"
          GroupSet:
            - Ref: "StorageGwEC2SecurityGroup"
          SubnetId: { Ref: "Subnet" }
          PrivateIpAddress: !Ref "StorageGWEC2InstanceIP"
      Tags:
        - Key: "Name"
          Value: "Storage-Gateway-Instance"

  StorageGwEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Storage Gateway Security Group
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: { Ref: "SSHnetwork" }
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: "-1"
        FromPort: "-1"
        ToPort: "-1"
        CidrIp: 10.0.0.0/16

  StorageGwEC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Action: ['sts:AssumeRole']
          Effect: Allow
          Principal:
            Service: [ec2.amazonaws.com]
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM

  StorageGwInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: StorageGwIP
      Path: /
      Roles:
      - !Ref StorageGwEC2Role

Outputs:

  StorageGWEC2Instance:
    Description: "Storage Gateway Instance"
    Value: !Ref "StorageGWEC2Instance"
